--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,11 @@
     android:padding="16dp" android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/calcule_quanto_tempo_falta_para_sua_aposentadoria"
         android:textSize="16sp"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="10dp" />
 
     <TextView
